out
localhost:TFG:# make
make -C /lib/modules/6.12.41-current-bcm2711/build M=/home/noel/Desktop/TFG modules
make[1]: Entering directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
  CC [M]  /home/noel/Desktop/TFG/crypth.o
  MODPOST /home/noel/Desktop/TFG/Module.symvers
  CC [M]  /home/noel/Desktop/TFG/crypth.mod.o
  LD [M]  /home/noel/Desktop/TFG/crypth.ko
make[1]: Leaving directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
localhost:TFG:# insmod crypth.ko
localhost:TFG:# dmesg | tail
[ 8059.976472] hwmon hwmon1: Voltage normalised
[ 8061.988792] hwmon hwmon1: Undervoltage detected!
[ 8066.020437] hwmon hwmon1: Voltage normalised
[ 8067.697219] vc4-drm gpu: swiotlb buffer is full (sz: 2097152 bytes), total 32768 (slots), used 0 (slots)
[ 8080.134167] hwmon hwmon1: Undervoltage detected!
[ 8082.148769] hwmon hwmon1: Voltage normalised
[ 8096.110424] K (32Bytes) generated in the load = 15:d5:54:59:2b:8c:45:09:14:ca:5f:4a:7c:76:00:e9:6c:a2:0a:88:65:51:1f:de:12:79:82:a8:a7:5d:98:78
[ 8096.110464] K (Base64) = FdVUWSuMRQkUyl9KfHYA6WyiCohlUR/eEnmCqKddmHg=
[ 8096.110478] Creating new proc file: /proc/fddev
[ 8096.110504] Creating new proc file: /proc/hmacdev
localhost:TFG:# ./user_wr
File descriptor written in /proc/fddev:
3
Content certificated written through /proc/hmacdev:
This is an authentic content, validated by HMAC(SHA-256)!!
Content of the created file (./file_handoff):
This is an authentic content, validated by HMAC(SHA-256)!!

---

QUHrFe7GKj0P4/8P9qmoD9Ohs+yRL8hhXmIO5IfkiF8=
localhost:TFG:# dmesg | tail
[ 8067.697219] vc4-drm gpu: swiotlb buffer is full (sz: 2097152 bytes), total 32768 (slots), used 0 (slots)
[ 8080.134167] hwmon hwmon1: Undervoltage detected!
[ 8082.148769] hwmon hwmon1: Voltage normalised
[ 8096.110424] K (32Bytes) generated in the load = 15:d5:54:59:2b:8c:45:09:14:ca:5f:4a:7c:76:00:e9:6c:a2:0a:88:65:51:1f:de:12:79:82:a8:a7:5d:98:78
[ 8096.110464] K (Base64) = FdVUWSuMRQkUyl9KfHYA6WyiCohlUR/eEnmCqKddmHg=
[ 8096.110478] Creating new proc file: /proc/fddev
[ 8096.110504] Creating new proc file: /proc/hmacdev
[ 8135.683905] write handler
[ 8135.683980] write to /proc/fddev: written 1 bytes from the user
[ 8135.685149] Successed printH: wrote 109 bytes (msg + sep + HMACb64)
localhost:TFG:# rmmod crypth 
localhost:TFG:# dmesg | tail
[ 8096.110424] K (32Bytes) generated in the load = 15:d5:54:59:2b:8c:45:09:14:ca:5f:4a:7c:76:00:e9:6c:a2:0a:88:65:51:1f:de:12:79:82:a8:a7:5d:98:78
[ 8096.110464] K (Base64) = FdVUWSuMRQkUyl9KfHYA6WyiCohlUR/eEnmCqKddmHg=
[ 8096.110478] Creating new proc file: /proc/fddev
[ 8096.110504] Creating new proc file: /proc/hmacdev
[ 8135.683905] write handler
[ 8135.683980] write to /proc/fddev: written 1 bytes from the user
[ 8135.685149] Successed printH: wrote 109 bytes (msg + sep + HMACb64)
[ 8169.160562] vc4-drm gpu: swiotlb buffer is full (sz: 2097152 bytes), total 32768 (slots), used 0 (slots)
[ 8180.561615] Delating proc file: /proc/fddev
[ 8180.561651] Delating proc file: /proc/hmacdev




noel@localhost:~/Desktop/TFG$ make
make -C /lib/modules/6.12.41-current-bcm2711/build M=/home/noel/Desktop/TFG modules
make[1]: Entering directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
  CC [M]  /home/noel/Desktop/TFG/crypth.o
/home/noel/Desktop/TFG/crypth.c: In function ‘get_hmac’:
/home/noel/Desktop/TFG/crypth.c:103:65: warning: passing argument 4 of ‘compute_hmac_sha256’ makes pointer from integer without a cast [-Wint-conversion]
  103 |  = compute_hmac_sha256((const u8 *)K, KEY_SIZE, (u8 **)buf, (size_t)buf_len, &hmac, &hmac_len);
      |                                                             ^~~~~~~~~~~~~~~
      |                                                             |
      |                                                             long unsigned int

/home/noel/Desktop/TFG/crypth.c:50:77: note: expected ‘unsigned int *’ but argument is of type ‘long unsigned int’
   50 | ha256(const u8 *buf, size_t buf_len, u8 **hmac, unsigned int *hmac_len)
      |                                                 ~~~~~~~~~~~~~~^~~~~~~~

/home/noel/Desktop/TFG/crypth.c:103:8: error: too many arguments to function ‘compute_hmac_sha256’
  103 |   rc = compute_hmac_sha256((const u8 *)K, KEY_SIZE, (u8 **)buf, (size_t)buf_len, &hmac, &hmac_len);
      |        ^~~~~~~~~~~~~~~~~~~
/home/noel/Desktop/TFG/crypth.c:50:1: note: declared here
   50 | compute_hmac_sha256(const u8 *buf, size_t buf_len, u8 **hmac, unsigned int *hmac_len)
      | ^~~~~~~~~~~~~~~~~~~
/home/noel/Desktop/TFG/crypth.c: At top level:
/home/noel/Desktop/TFG/crypth.c:38:14: warning: ‘endptr’ defined but not used [-Wunused-variable]
   38 | static char *endptr = NULL;
      |              ^~~~~~
make[3]: *** [scripts/Makefile.build:244: /home/noel/Desktop/TFG/crypth.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.12.41-current-bcm2711/Makefile:1945: /home/noel/Desktop/TFG] Error 2
make[1]: *** [Makefile:224: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
make: *** [Makefile:19: all] Error 2

